fix for double scrollbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,4 +43,6 @@
   overflow-wrap: break-all;
   word-wrap: break-word;
   hyphens: auto;
+
+  overflow: hidden;
 }
